--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-node_modules
-package-lock.json
-.env
+
 backend/node_modules
 frontend/node_modules
+frontend/build
 backend/package-lock.json
-backend/package-lock.json
+frontend/package-lock.json
